show card contents

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="add_card">Add Card</string>
 
     <string name="locale">Locale:</string>
+    <string name="title">Title:</string>
+    <string name="body">Body:</string>
 
     <string name="card_title_hint">Add card name</string>
 
@@ -26,5 +28,8 @@
     <string name="body_hint">Add body</string>
     <string name="save_button">Save</string>
 
+    <string name="flash_cards">Flash Cards</string>
+    <string name="add_flash_card">Add Flash Card</string>
+    <string name="add_locale">Add Locale</string>
 
 </resources>
